[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Player/PlayerYellowSkin.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Player/FastPlayerMovementData.tres" type="Resource" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 8.75 )

[node name="Player" type="KinematicBody2D"]
z_index = 10
collision_layer = 2
script = ExtResource( 1 )
move_data = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = ExtResource( 2 )
animation = "idle"
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.75 )
shape = SubResource( 3 )

[node name="LadderDetection" type="RayCast2D" parent="."]
position = Vector2( 0, -15 )
enabled = true
cast_to = Vector2( 0, 17 )
collide_with_areas = true
collide_with_bodies = false

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="CoyoteJumpTimer" type="Timer" parent="."]

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
position = Vector2( 0, -12 )

[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="CoyoteJumpTimer" to="." method="_on_CoyoteJumpTimer_timeout"]
